--- a/notebooks/02_clean_transform_silver.ipynb
+++ b/notebooks/02_clean_transform_silver.ipynb
@@ -127,6 +127,7 @@
     "        \"checksum_txt\",\n",
     "        md5(concat_ws(\"|\",\n",
     "            col(\"address\"),\n",
+    "            col(\"age\"),\n",
     "            col(\"phone_number\"),\n",
     "            col(\"bill_amount\"),\n",
     "            col(\"insurance_provider\"),\n",
@@ -137,7 +138,7 @@
     "    .withColumn(\"create_timestamp\", current_timestamp())\n",
     "    .withColumn(\"update_timestamp\", current_timestamp())\n",
     "    .withColumn(\"load_ctl_key\", date_format(current_timestamp(), \"yyyyMMddHHmmss\")\n",
-    ")\n",
+    "))\n",
     "\n",
     "df_patient_silver.createOrReplaceTempView(\"patient_landing_cleaned\")\n",
     "\n",
@@ -166,8 +167,29 @@
     "# ---------------------------------------------\n",
     "# 3. Write Silver Patient Delta Table\n",
     "# ---------------------------------------------\n",
-    "df_patient_silver.write.mode(\"overwrite\").format(\"delta\").save(silver_patient_path)\n",
-    "\n",
+    "dbutils.fs.rm(silver_patient_path, True)\n",
+    "df_patient_silver.write.mode(\"overwrite\").format(\"delta\").save(silver_patient_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "c04bfe12-dc3f-4c4e-8a1b-2f9c648c2cdc",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "spark.sql(\"DROP TABLE IF EXISTS patient_silver\")\n",
     "spark.sql(\"\"\"\n",
     "    CREATE TABLE IF NOT EXISTS patient_silver\n",
     "    USING DELTA\n",
@@ -198,17 +220,51 @@
     "# ---------------------------------------------\n",
     "# 4. Insurance Silver (Simple Clean)\n",
     "# ---------------------------------------------\n",
-    "df_insurance_silver = (\n",
-    "    df_insurance_raw\n",
-    "    .withColumn(\"policy_id\", trim(col(\"policy_id\")))\n",
-    "    .withColumn(\"insurance_provider\", trim(col(\"insurance_provider\")))\n",
-    "    .withColumn(\"amount_covered\", col(\"amount_covered\").cast(\"double\"))\n",
-    "    .withColumn(\"claim_status\", trim(col(\"claim_status\")))\n",
-    "    .withColumn(\"load_time\", current_timestamp())\n",
+    "from pyspark.sql.functions import (\n",
+    "    col, trim, current_timestamp, lit, date_format,\n",
+    "    md5, concat_ws\n",
     ")\n",
     "\n",
-    "df_insurance_silver.write.mode(\"overwrite\").format(\"delta\").save(silver_insurance_path)\n",
+    "df_insurance_silver = (\n",
+    "    df_insurance_raw\n",
+    "        .withColumn(\"policy_id\", trim(col(\"policy_id\")))\n",
+    "        .withColumn(\"insurance_provider\", trim(col(\"insurance_provider\")))\n",
+    "        .withColumn(\"claim_status\", trim(col(\"claim_status\")))\n",
+    "        .withColumn(\"amount_covered\", col(\"amount_covered\").cast(\"double\"))\n",
+    "        .withColumn(\"checksum_txt\", md5(concat_ws(\"|\",\n",
+    "            col(\"insurance_provider\"),\n",
+    "            col(\"amount_covered\"),\n",
+    "            col(\"claim_status\")\n",
+    "        )))\n",
+    "        .withColumn(\"primary_key\", md5(col(\"policy_id\")))\n",
+    "        .withColumn(\"create_timestamp\", current_timestamp())\n",
+    "        .withColumn(\"update_timestamp\", lit(\"9999-12-31\"))\n",
+    "        .withColumn(\"load_ctl_key\", date_format(current_timestamp(), \"yyyyMMddHHmmss\"))\n",
+    ")\n",
     "\n",
+    "dbutils.fs.rm(silver_insurance_path, True)\n",
+    "df_insurance_silver.write.mode(\"overwrite\").format(\"delta\").save(silver_insurance_path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "247a337e-0137-49fa-91be-44e6fe3c6c5b",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "spark.sql(\"DROP TABLE IF EXISTS insurance_silver\")\n",
     "spark.sql(\"\"\"\n",
     "    CREATE TABLE IF NOT EXISTS insurance_silver\n",
     "    USING DELTA\n",
@@ -223,7 +279,11 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "440d042a-87af-43c2-a9a7-ad2f706171f1",
      "showTitle": false,
@@ -232,14 +292,54 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "%sql\n",
+    "-- ---------------------------------------------\n",
+    "-- 1. Load Silver Table into Temp View\n",
+    "-- ---------------------------------------------\n",
+    "CREATE OR REPLACE TEMP VIEW patient_silver AS\n",
+    "SELECT *\n",
+    "FROM delta.`dbfs:/FileStore/Mini_Project/silver/patient_silver`;"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "5c534220-de3f-4cf4-99dc-b4fa68a93dc6",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "-- ---------------------------------------------\n",
+    "-- 1. Load Silver Table into Temp View\n",
+    "-- ---------------------------------------------\n",
+    "CREATE OR REPLACE TEMP VIEW insurance_silver AS\n",
+    "SELECT *\n",
+    "FROM delta.`dbfs:/FileStore/Mini_Project/silver/insurance_silver`;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "e8180ccd-63fa-428b-8bed-8d10ebd06531",
      "showTitle": false,
@@ -248,7 +348,361 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "%sql\n",
+    "CREATE TABLE if not exists patient_dim (\n",
+    "    patient_dim_key BIGINT GENERATED ALWAYS AS IDENTITY,  -- Delta auto-generates this\n",
+    "    patient_id STRING,\n",
+    "    first_name STRING,\n",
+    "    last_name STRING,\n",
+    "    age INT,\n",
+    "    address STRING,\n",
+    "    phone_number STRING,\n",
+    "    bill_amount DOUBLE,\n",
+    "    insurance_provider STRING,\n",
+    "    policy_id STRING,\n",
+    "    checksum_txt STRING,\n",
+    "    load_ctl_key STRING,\n",
+    "    effective_start_dt TIMESTAMP,\n",
+    "    effective_end_dt TIMESTAMP,\n",
+    "    is_current STRING\n",
+    ")\n",
+    "USING DELTA\n",
+    "LOCATION 'dbfs:/FileStore/Mini_Project/dim/patient_dim';\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "01986a9f-7826-42a8-a1f0-9d3c6e02ccf3",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "CREATE TABLE IF NOT EXISTS insurance_dim (\n",
+    "    insurance_dim_key BIGINT,        -- surrogate key (auto incremental or generated in ETL)\n",
+    "    policy_id STRING,                -- business key\n",
+    "    insurance_provider STRING,\n",
+    "    amount_covered DOUBLE,\n",
+    "    claim_status STRING,\n",
+    "    checksum_txt STRING,             -- detect changes\n",
+    "    load_ctl_key INT,                -- audit field\n",
+    "    effective_start_dt TIMESTAMP,    -- SCD2 validity start\n",
+    "    effective_end_dt TIMESTAMP,      -- SCD2 validity end\n",
+    "    is_current STRING                -- 'Y' or 'N'\n",
+    ")\n",
+    "USING DELTA\n",
+    "LOCATION 'dbfs:/FileStore/Mini_Project/dim/insurance_dim';\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "5c8fb646-1543-40c4-baca-2099d7031f5f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "-- 3. Create Transaction Indicator (I/U/N)\n",
+    "-- ---------------------------------------------\n",
+    "CREATE OR REPLACE TEMP VIEW patient_silver_addTranscationindicator AS\n",
+    "SELECT\n",
+    "    src.*,\n",
+    "    CASE\n",
+    "        WHEN dim.patient_id IS NULL THEN 'I'\n",
+    "        WHEN dim.checksum_txt <> src.checksum_txt THEN 'U'\n",
+    "        ELSE 'N'\n",
+    "    END AS transaction_ind\n",
+    "FROM patient_silver src\n",
+    "LEFT JOIN patient_dim dim\n",
+    "    ON src.patient_id = dim.patient_id\n",
+    "    AND dim.is_current = 'Y';"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "c42d81c6-169f-4bf8-ad73-187f64677c3d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "-- 3. Create Transaction Indicator (I/U/N) for Insurance\n",
+    "-- -----------------------------------------------------\n",
+    "CREATE OR REPLACE global TEMP VIEW insurance_silver_addTranscationindicator AS\n",
+    "SELECT\n",
+    "    src.*,\n",
+    "    CASE\n",
+    "        WHEN dim.policy_id IS NULL THEN 'I'              \n",
+    "        WHEN dim.checksum_txt <> src.checksum_txt THEN 'U'  \n",
+    "        ELSE 'N'                                         \n",
+    "    END AS transaction_ind\n",
+    "FROM insurance_silver src\n",
+    "LEFT JOIN insurance_dim dim\n",
+    "    ON src.policy_id = dim.policy_id\n",
+    "    AND dim.is_current = 'Y';\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "438dacb5-1c7b-422e-bcbf-8359f084c159",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "-- ---------------------------------------------\n",
+    "-- 4. Deduplicate Landing Data (ROW_NUMBER logic)\n",
+    "-- ---------------------------------------------\n",
+    "CREATE OR REPLACE TEMP VIEW patient_final_silver AS\n",
+    "SELECT *\n",
+    "FROM (\n",
+    "    SELECT *,\n",
+    "           ROW_NUMBER() OVER (PARTITION BY patient_id ORDER BY update_timestamp DESC) AS rn\n",
+    "    FROM patient_silver_addTranscationindicator\n",
+    ") t\n",
+    "WHERE rn = 1;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "ce684dce-3c77-4fec-93c2-7cc3b023221b",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "DROP TABLE IF EXISTS patient_final_silver;\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "7afae361-c1c1-499e-a2da-368993cf51a0",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "-- ---------------------------------------------------\n",
+    "-- 2. Create Patient Final Silver as Delta Table\n",
+    "-- ---------------------------------------------------\n",
+    "CREATE OR REPLACE TABLE patient_final_silver\n",
+    "USING DELTA\n",
+    "LOCATION 'dbfs:/FileStore/Mini_Project/silver_final/patient_final_silver'\n",
+    "AS\n",
+    "SELECT *\n",
+    "FROM (\n",
+    "    SELECT *,\n",
+    "           ROW_NUMBER() OVER (PARTITION BY patient_id ORDER BY load_ctl_key DESC) AS rn\n",
+    "    FROM patient_silver_addTranscationindicator\n",
+    ") t\n",
+    "WHERE rn = 1;\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "eed22fa6-e3a8-4c4e-a10c-d49ae4f49c25",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "DROP TABLE IF EXISTS insurance_final_silver;\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "3d84b318-fcfa-4c5e-be62-5db5fe1e9caa",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "CREATE OR REPLACE TABLE insurance_final_silver\n",
+    "USING DELTA\n",
+    "LOCATION 'dbfs:/FileStore/Mini_Project/silver_final/insurance_final_silver'\n",
+    "AS\n",
+    "SELECT *\n",
+    "FROM (\n",
+    "    SELECT *,\n",
+    "           ROW_NUMBER() OVER (PARTITION BY policy_id ORDER BY load_ctl_key DESC) AS rn\n",
+    "    FROM insurance_silver_addTranscationindicator\n",
+    ") t\n",
+    "WHERE rn = 1;\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "31040336-5f3a-40ee-8f3d-e71427b16a92",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "SELECT patient_id, transaction_ind, checksum_txt\n",
+    "FROM patient_silver_addTranscationindicator;\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "9bfda390-e1a5-4eaf-afa3-ff5de7a43fed",
+     "showTitle": false,
+     "tableResultSettingsMap": {
+      "0": {
+       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1764229377746}",
+       "filterBlob": null,
+       "queryPlanFiltersBlob": null,
+       "tableResultIndex": 0
+      }
+     },
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "SELECT *\n",
+    "FROM patient_final_silver;\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "836d3a94-8ec3-4816-b8e5-40e90c651f3a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "spark.sql(\"DESCRIBE patient_final_silver\").show()"
+   ]
   }
  ],
  "metadata": {
@@ -262,6 +716,12 @@
    "inputWidgetPreferences": null,
    "language": "python",
    "notebookMetadata": {
+    "mostRecentlyExecutedCommandWithImplicitDF": {
+     "commandId": 7729577076726606,
+     "dataframes": [
+      "_sqldf"
+     ]
+    },
     "pythonIndentUnit": 4
    },
    "notebookName": "02_clean_transform_silver",
