--- a/notebooks/04_validation_queries.ipynb
+++ b/notebooks/04_validation_queries.ipynb
@@ -10,6 +10,131 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "9f143ac1-d01f-484a-a1ec-43af56b8f34e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "DROP TABLE IF EXISTS patient_dim;\n",
+    "DROP TABLE IF EXISTS insurance_dim;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "27c17ff3-25f0-49a4-b42a-6776e86a8782",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%python\n",
+    "dbutils.fs.rm(\"dbfs:/FileStore/Mini_Project/dim/patient_dim\", True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "4cdfa25f-abff-46eb-b89a-182920683a79",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%python\n",
+    "dbutils.fs.rm(\"dbfs:/FileStore/Mini_Project/dim/insurance_dim\", True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "f147dbbd-e189-40f6-aad8-10f6a2e68e34",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%python\n",
+    "dbutils.fs.ls(\"dbfs:/FileStore/Mini_Project/dim\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "52e320f1-d7f8-4191-856f-b14fa6666d88",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%python\n",
+    "paths = [\n",
+    "    \"dbfs:/FileStore/Mini_Project/bronze/patient_bronze\",\n",
+    "    \"dbfs:/FileStore/Mini_Project/bronze/insurance_bronze\",\n",
+    "    \"dbfs:/FileStore/Mini_Project/silver/patient_silver\",\n",
+    "    \"dbfs:/FileStore/Mini_Project/silver/insurance_silver\",\n",
+    "    \"dbfs:/FileStore/Mini_Project/silver_final/patient_final_silver\",\n",
+    "    \"dbfs:/FileStore/Mini_Project/silver_final/insurance_final_silver\",\n",
+    "    \"dbfs:/FileStore/Mini_Project/dim/patient_dim\",\n",
+    "    \"dbfs:/FileStore/Mini_Project/dim/insurance_dim\",\n",
+    "    \"dbfs:/FileStore/Mini_Project/landing/patient_landing\",\n",
+    "    \"dbfs:/FileStore/Mini_Project/landing/insurance_landing\"\n",
+    "]\n",
+    "\n",
+    "for p in paths:\n",
+    "    dbutils.fs.rm(p, True)\n",
+    "    print(\"Deleted:\", p)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "b8ce59bc-4335-49ba-85b7-0db8036aaf69",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -26,8 +151,8 @@
     "------------------------------------------------------------\n",
     "-- 1. Basic Record Counts\n",
     "------------------------------------------------------------\n",
-    "SELECT 'Patient Silver Count' AS metric, COUNT(*) AS value\n",
-    "FROM patient_silver;\n",
+    "-- SELECT 'Patient Silver Count' AS metric, COUNT(*) AS value\n",
+    "-- FROM patient_silver;\n",
     "\n",
     "SELECT 'Patient Dim Count (Gold)' AS metric, COUNT(*) AS value\n",
     "FROM patient_dim;"
@@ -45,7 +170,14 @@
      "inputWidgets": {},
      "nuid": "a230a2b0-1716-45c4-81b4-1bb6a62b8bd2",
      "showTitle": false,
-     "tableResultSettingsMap": {},
+     "tableResultSettingsMap": {
+      "0": {
+       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1764224118874}",
+       "filterBlob": null,
+       "queryPlanFiltersBlob": null,
+       "tableResultIndex": 0
+      }
+     },
      "title": ""
     }
    },
@@ -72,7 +204,14 @@
      "inputWidgets": {},
      "nuid": "30a3e235-abea-4722-805b-79f26b6c7d1e",
      "showTitle": false,
-     "tableResultSettingsMap": {},
+     "tableResultSettingsMap": {
+      "0": {
+       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1764224125948}",
+       "filterBlob": null,
+       "queryPlanFiltersBlob": null,
+       "tableResultIndex": 0
+      }
+     },
      "title": ""
     }
    },
