--- a/notebooks/01_ingest_raw_to_bronze.ipynb
+++ b/notebooks/01_ingest_raw_to_bronze.ipynb
@@ -49,7 +49,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "132f69c2-8198-4e66-8352-4794aa47e507",
+     "nuid": "24f89842-abdc-401c-8edd-f80dfcf43086",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -57,20 +57,18 @@
    },
    "outputs": [],
    "source": [
-    "# -----------------------------\n",
-    "# 2. Read Raw Patient File\n",
-    "# -----------------------------\n",
-    "df_patient_raw = (\n",
-    "    spark.read\n",
-    "         .option(\"header\", True)\n",
-    "         .option(\"inferSchema\", True)\n",
-    "         .csv(patient_src_path)\n",
-    "         .withColumn(\"ingest_time\", current_timestamp())\n",
-    "         .withColumn(\"source_file\", input_file_name())\n",
-    ")\n",
+    "from pyspark.sql.types import *\n",
     "\n",
-    "print(\"Patient_RAW Schema:\")\n",
-    "df_patient_raw.printSchema()"
+    "patient_schema = StructType([\n",
+    "    StructField(\"patient_id\", StringType(), False),   \n",
+    "    StructField(\"name\", StringType(), True),\n",
+    "    StructField(\"age\", IntegerType(), True),\n",
+    "    StructField(\"address\", StringType(), True),\n",
+    "    StructField(\"phone_number\", StringType(), True),\n",
+    "    StructField(\"bill_amount\", DoubleType(), True),\n",
+    "    StructField(\"insurance_provider\", StringType(), True),\n",
+    "    StructField(\"policy_id\", StringType(), False)\n",
+    "])\n"
    ]
   },
   {
@@ -83,7 +81,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "b2c0eb88-9bca-46ec-9f8c-f48f093bd55a",
+     "nuid": "3a5262e3-7a99-43dd-acc9-dea09a4ca298",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -91,24 +89,39 @@
    },
    "outputs": [],
    "source": [
-    "from pyspark.sql import functions as F\n",
-    "import re\n",
+    "from pyspark.sql.functions import current_timestamp, input_file_name\n",
     "\n",
-    "def clean_col(name: str) -> str:\n",
-    "    # strip spaces, lower-case, replace bad chars with underscore\n",
-    "    name = name.strip()\n",
-    "    name = re.sub(r\"[ ,;{}()\\n\\t=]\", \"_\", name)\n",
-    "    return name.lower()\n",
-    "\n",
-    "# After reading raw df\n",
-    "df_patient_raw = spark.read.option(\"header\", True).csv(patient_src_path)\n",
-    "\n",
-    "# Clean column names\n",
-    "df_patient_raw = df_patient_raw.toDF(*[clean_col(c) for c in df_patient_raw.columns])\n",
-    "\n",
-    "# Do the same for insurance\n",
-    "df_insurance_raw = spark.read.option(\"header\", True).csv(insurance_src_path)\n",
-    "df_insurance_raw = df_insurance_raw.toDF(*[clean_col(c) for c in df_insurance_raw.columns])\n"
+    "df_patient_raw = (\n",
+    "    spark.read.csv(\n",
+    "        \"dbfs:/FileStore/Mini_Project/Source_data/Patient_Source.csv\",\n",
+    "        schema=patient_schema,\n",
+    "        header=True\n",
+    "    )\n",
+    "    .withColumn(\"ingest_time\", current_timestamp())\n",
+    "    .withColumn(\"source_file\", input_file_name())\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "132f69c2-8198-4e66-8352-4794aa47e507",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "print(\"Patient_RAW Schema:\")\n",
+    "df_patient_raw.printSchema()"
    ]
   },
   {
@@ -145,7 +158,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "987f7868-894e-485c-b646-c447b5601057",
+     "nuid": "ada3515b-3605-46c6-b6dc-258a0fdd5702",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -153,8 +166,7 @@
    },
    "outputs": [],
    "source": [
-    "dbutils.fs.rm(\"dbfs:/FileStore/Mini_Project/bronze/patient_bronze\", recurse=True)\n",
-    "dbutils.fs.rm(\"dbfs:/FileStore/Mini_Project/bronze/insurance_bronze\", recurse=True)"
+    "df_patient_raw = df_patient_raw.na.drop(subset=[\"patient_id\"])\n"
    ]
   },
   {
@@ -178,7 +190,30 @@
     "# -----------------------------\n",
     "# 3. Write Patient Data to Bronze (Delta)\n",
     "# -----------------------------\n",
-    "df_patient_raw.write.mode(\"overwrite\").format(\"delta\").save(bronze_patient_path)\n",
+    "dbutils.fs.rm(bronze_patient_path, True)\n",
+    "\n",
+    "\n",
+    "df_patient_raw.write.mode(\"overwrite\").format(\"delta\").save(bronze_patient_path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "5eb764bb-1dd7-4bfb-9ff7-e5589421d0d9",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
     "\n",
     "spark.sql(\"\"\"\n",
     "    CREATE TABLE IF NOT EXISTS patient_bronze\n",
@@ -187,6 +222,54 @@
     "\"\"\")\n",
     "\n",
     "print(\"Patient Bronze Table Created Successfully.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "9eec20a9-9d41-4b1b-a862-38f6e6590559",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "ALTER TABLE patient_bronze\n",
+    "ALTER COLUMN patient_id SET NOT NULL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "51666ed5-a384-4bfd-a487-2b292be25f3a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "ALTER TABLE patient_bronze\n",
+    "ALTER COLUMN source_file SET NOT NULL"
    ]
   },
   {
@@ -233,6 +316,27 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "cbc3bd21-e4f6-426c-8a64-1065901e331c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df_insurance_raw = df_insurance_raw.na.drop(subset=[\"policy_id\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "70c851b8-779b-44d7-a105-0e803c41c90b",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -244,8 +348,28 @@
     "# -----------------------------\n",
     "# 5. Write Insurance Data to Bronze (Delta)\n",
     "# -----------------------------\n",
-    "df_insurance_raw.write.mode(\"overwrite\").format(\"delta\").save(bronze_insurance_path)\n",
-    "\n",
+    "dbutils.fs.rm(bronze_insurance_path, True)\n",
+    "df_insurance_raw.write.mode(\"overwrite\").format(\"delta\").save(bronze_insurance_path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "d95b1e90-acd3-4f04-ac1d-59286c495c11",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
     "spark.sql(\"\"\"\n",
     "    CREATE TABLE IF NOT EXISTS insurance_bronze\n",
     "    USING DELTA\n",
@@ -253,6 +377,78 @@
     "\"\"\")\n",
     "\n",
     "print(\"Insurance Bronze Table Created Successfully.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "ee0ab818-9bfa-4024-8230-734f9472e1ca",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "ALTER TABLE insurance_bronze\n",
+    "ALTER COLUMN policy_id SET NOT NULL;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "2574dd91-7bcb-4e01-8e4e-df21169b4192",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "ALTER TABLE insurance_bronze\n",
+    "ALTER COLUMN ingest_time SET NOT NULL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "4df34c48-9a73-49b9-9894-bfc4dd58959f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "ALTER TABLE insurance_bronze\n",
+    "ALTER COLUMN source_file SET NOT NULL"
    ]
   },
   {
@@ -335,7 +531,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 7665633639427442,
+     "commandId": 7729577076726402,
      "dataframes": [
       "_sqldf"
      ]
