--- a/notebooks/03_scd2_merge_gold.ipynb
+++ b/notebooks/03_scd2_merge_gold.ipynb
@@ -10,145 +10,6 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "af84a8d0-90e6-481f-bf23-659ae3e24598",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "-- Databricks Notebook\n",
-    "-- ---------------------------------------------------------\n",
-    "-- Notebook 03: SCD-2 Merge into Gold Layer (patient_dim)\n",
-    "-- ---------------------------------------------------------\n",
-    "\n",
-    "\n",
-    "-- ---------------------------------------------\n",
-    "-- 1. Load Silver Table into Temp View\n",
-    "-- ---------------------------------------------\n",
-    "CREATE OR REPLACE TEMP VIEW patient_silver AS\n",
-    "SELECT *\n",
-    "FROM delta.`dbfs:/FileStore/Mini_Project/silver/patient_silver`;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "b6b4cb2b-3860-4775-b0f2-784e13b09cad",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "-- ---------------------------------------------\n",
-    "-- 2. Load Existing Dimension Table (patient_dim)\n",
-    "-- ---------------------------------------------\n",
-    "CREATE TABLE IF NOT EXISTS patient_dim (\n",
-    "    patient_dim_key BIGINT,\n",
-    "    patient_id STRING,\n",
-    "    first_name STRING,\n",
-    "    last_name STRING,\n",
-    "    age INT,\n",
-    "    address STRING,\n",
-    "    phone_number STRING,\n",
-    "    bill_amount DOUBLE,\n",
-    "    insurance_provider STRING,\n",
-    "    policy_id STRING,\n",
-    "    checksum_txt STRING,\n",
-    "    load_ctl_key INT,\n",
-    "    effective_start_dt TIMESTAMP,\n",
-    "    effective_end_dt TIMESTAMP,\n",
-    "    is_current STRING\n",
-    ")\n",
-    "USING DELTA\n",
-    "LOCATION 'dbfs:/FileStore/Mini_Project/dim/patient_dim';"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "d6c60cdb-cd9c-4b16-be18-e191624b42ac",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "-- 3. Create Transaction Indicator (I/U/N)\n",
-    "-- ---------------------------------------------\n",
-    "CREATE OR REPLACE TEMP VIEW patient_landing_txn AS\n",
-    "SELECT\n",
-    "    src.*,\n",
-    "    CASE\n",
-    "        WHEN dim.patient_id IS NULL THEN 'I'\n",
-    "        WHEN dim.checksum_txt <> src.checksum_txt THEN 'U'\n",
-    "        ELSE 'N'\n",
-    "    END AS transaction_ind\n",
-    "FROM patient_silver src\n",
-    "LEFT JOIN patient_dim dim\n",
-    "    ON src.patient_id = dim.patient_id\n",
-    "    AND dim.is_current = 'Y';"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "51ea9c4d-ae33-441c-aa7f-53a2fdf94ed1",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "-- ---------------------------------------------\n",
-    "-- 4. Deduplicate Landing Data (ROW_NUMBER logic)\n",
-    "-- ---------------------------------------------\n",
-    "CREATE OR REPLACE TEMP VIEW patient_landing_final_dedup AS\n",
-    "SELECT *\n",
-    "FROM (\n",
-    "    SELECT *,\n",
-    "           ROW_NUMBER() OVER (PARTITION BY patient_id ORDER BY updated_timestamp DESC) AS rn\n",
-    "    FROM patient_landing_txn\n",
-    ") t\n",
-    "WHERE rn = 1;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
      "nuid": "09030f6a-2cbf-4b4c-8bc8-23d3bdd655a9",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -157,13 +18,207 @@
    },
    "outputs": [],
    "source": [
-    "-- ---------------------------------------------\n",
-    "-- 5. Perform SCD-2 MERGE into patient_dim\n",
-    "-- ---------------------------------------------\n",
+    "-- -- ---------------------------------------------\n",
+    "-- -- 5. Perform SCD-2 MERGE into patient_dim\n",
+    "-- -- ---------------------------------------------\n",
+    "-- MERGE INTO patient_dim AS dim\n",
+    "-- USING patient_final_silver AS src\n",
+    "-- ON dim.patient_id = src.patient_id\n",
+    "-- AND dim.is_current = 'Y'\n",
+    "-- -- ---------------------------------------------\n",
+    "-- -- 5A. Update existing record (close old row)\n",
+    "-- -- ---------------------------------------------\n",
+    "-- WHEN MATCHED AND src.transaction_ind = 'U'\n",
+    "-- THEN UPDATE SET\n",
+    "--     dim.is_current = 'N',\n",
+    "--     dim.effective_end_dt = current_timestamp()\n",
+    "-- -- ---------------------------------------------\n",
+    "-- -- 5B. Insert new version after update\n",
+    "-- -- ---------------------------------------------\n",
+    "-- WHEN NOT MATCHED AND src.transaction_ind = 'U'\n",
+    "-- THEN INSERT (\n",
+    "--       patient_dim_key,\n",
+    "--       patient_id,\n",
+    "--       first_name,\n",
+    "--       last_name,\n",
+    "--       age,\n",
+    "--       address,\n",
+    "--       phone_number,\n",
+    "--       bill_amount,\n",
+    "--       insurance_provider,\n",
+    "--       policy_id,\n",
+    "--       checksum_txt,\n",
+    "--       load_ctl_key,\n",
+    "--       effective_start_dt,\n",
+    "--       effective_end_dt,\n",
+    "--       is_current\n",
+    "-- )\n",
+    "-- VALUES (\n",
+    "--       (SELECT COALESCE(MAX(patient_dim_key), 0) + 1 FROM patient_dim),\n",
+    "--       src.patient_id,\n",
+    "--       src.first_name,\n",
+    "--       src.last_name,\n",
+    "--       src.age,\n",
+    "--       src.address,\n",
+    "--       src.phone_number,\n",
+    "--       src.bill_amount,\n",
+    "--       src.insurance_provider,\n",
+    "--       src.policy_id,\n",
+    "--       src.checksum_txt,\n",
+    "--       src.load_ctl_key,\n",
+    "--       current_timestamp(),\n",
+    "--       '9999-12-31',\n",
+    "--       'Y'\n",
+    "-- )\n",
+    "-- -- ---------------------------------------------\n",
+    "-- -- 5C. Insert new record (Insert case)\n",
+    "-- -- ---------------------------------------------\n",
+    "-- WHEN NOT MATCHED AND src.transaction_ind = 'I'\n",
+    "-- THEN INSERT (\n",
+    "--       patient_dim_key,\n",
+    "--       patient_id,\n",
+    "--       first_name,\n",
+    "--       last_name,\n",
+    "--       age,\n",
+    "--       address,\n",
+    "--       phone_number,\n",
+    "--       bill_amount,\n",
+    "--       insurance_provider,\n",
+    "--       policy_id,\n",
+    "--       checksum_txt,\n",
+    "--       load_ctl_key,\n",
+    "--       effective_start_dt,\n",
+    "--       effective_end_dt,\n",
+    "--       is_current\n",
+    "-- )\n",
+    "-- VALUES (\n",
+    "--       (SELECT COALESCE(MAX(patient_dim_key), 0) + 1 FROM patient_dim),\n",
+    "--       src.patient_id,\n",
+    "--       src.first_name,\n",
+    "--       src.last_name,\n",
+    "--       src.age,\n",
+    "--       src.address,\n",
+    "--       src.phone_number,\n",
+    "--       src.bill_amount,\n",
+    "--       src.insurance_provider,\n",
+    "--       src.policy_id,\n",
+    "--       src.checksum_txt,\n",
+    "--       date_format(current_timestamp(), \"yyyyMMddHHmmss\"),\n",
+    "--       current_timestamp(),\n",
+    "--       '9999-12-31',\n",
+    "--       'Y'\n",
+    "-- );\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "8cb84ac5-bc0a-4d36-b594-7ba0bb21f738",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "-- 5A. Close existing active rows that need update\n",
     "MERGE INTO patient_dim AS dim\n",
-    "USING patient_landing_final_dedup AS src\n",
+    "USING patient_final_silver AS src\n",
     "ON dim.patient_id = src.patient_id\n",
     "AND dim.is_current = 'Y'\n",
+    "WHEN MATCHED AND src.transaction_ind = 'U'\n",
+    "THEN UPDATE SET\n",
+    "    dim.is_current = 'N',\n",
+    "    dim.effective_end_dt = current_timestamp();\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "cc19dae7-a25c-4ef7-941f-a30762526331",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "INSERT INTO patient_dim (\n",
+    "      patient_id,\n",
+    "      first_name,\n",
+    "      last_name,\n",
+    "      age,\n",
+    "      address,\n",
+    "      phone_number,\n",
+    "      bill_amount,\n",
+    "      insurance_provider,\n",
+    "      policy_id,\n",
+    "      checksum_txt,\n",
+    "      load_ctl_key,\n",
+    "      effective_start_dt,\n",
+    "      effective_end_dt,\n",
+    "      is_current\n",
+    ")\n",
+    "SELECT\n",
+    "    src.patient_id,\n",
+    "    src.first_name,\n",
+    "    src.last_name,\n",
+    "    src.age,\n",
+    "    src.address,\n",
+    "    src.phone_number,\n",
+    "    src.bill_amount,\n",
+    "    src.insurance_provider,\n",
+    "    src.policy_id,\n",
+    "    src.checksum_txt,\n",
+    "    src.load_ctl_key,\n",
+    "    current_timestamp() AS effective_start_dt,\n",
+    "    TIMESTAMP('9999-12-31 00:00:00') AS effective_end_dt,\n",
+    "    'Y' AS is_current\n",
+    "FROM patient_final_silver src\n",
+    "WHERE src.transaction_ind IN ('I', 'U');\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "a3e07c5a-5c24-4fdc-ab99-bf7de4f457b6",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "-- ---------------------------------------------\n",
+    "-- 5. Perform SCD-2 MERGE into insurance_dim\n",
+    "-- ---------------------------------------------\n",
+    "MERGE INTO insurance_dim AS dim\n",
+    "USING insurance_final_silver AS src\n",
+    "ON dim.policy_id = src.policy_id\n",
+    "AND dim.is_current = 'Y'\n",
+    "\n",
     "-- ---------------------------------------------\n",
     "-- 5A. Update existing record (close old row)\n",
     "-- ---------------------------------------------\n",
@@ -171,21 +226,17 @@
     "THEN UPDATE SET\n",
     "    dim.is_current = 'N',\n",
     "    dim.effective_end_dt = current_timestamp()\n",
+    "\n",
     "-- ---------------------------------------------\n",
-    "-- 5B. Insert new version after update\n",
+    "-- 5B. Insert new version after update (Update case)\n",
     "-- ---------------------------------------------\n",
     "WHEN NOT MATCHED AND src.transaction_ind = 'U'\n",
     "THEN INSERT (\n",
-    "      patient_dim_key,\n",
-    "      patient_id,\n",
-    "      first_name,\n",
-    "      last_name,\n",
-    "      age,\n",
-    "      address,\n",
-    "      phone_number,\n",
-    "      bill_amount,\n",
-    "      insurance_provider,\n",
+    "      insurance_dim_key,\n",
     "      policy_id,\n",
+    "      insurance_provider,\n",
+    "      amount_covered,\n",
+    "      claim_status,\n",
     "      checksum_txt,\n",
     "      load_ctl_key,\n",
     "      effective_start_dt,\n",
@@ -193,37 +244,28 @@
     "      is_current\n",
     ")\n",
     "VALUES (\n",
-    "      (SELECT COALESCE(MAX(patient_dim_key), 0) + 1 FROM patient_dim),\n",
-    "      src.patient_id,\n",
-    "      src.first_name,\n",
-    "      src.last_name,\n",
-    "      src.age,\n",
-    "      src.address,\n",
-    "      src.phone_number,\n",
-    "      src.bill_amount,\n",
-    "      src.insurance_provider,\n",
+    "      (SELECT COALESCE(MAX(insurance_dim_key), 0) + 1 FROM insurance_dim),\n",
     "      src.policy_id,\n",
+    "      src.insurance_provider,\n",
+    "      src.amount_covered,\n",
+    "      src.claim_status,\n",
     "      src.checksum_txt,\n",
     "      src.load_ctl_key,\n",
     "      current_timestamp(),\n",
     "      '9999-12-31',\n",
     "      'Y'\n",
     ")\n",
+    "\n",
     "-- ---------------------------------------------\n",
     "-- 5C. Insert new record (Insert case)\n",
     "-- ---------------------------------------------\n",
     "WHEN NOT MATCHED AND src.transaction_ind = 'I'\n",
     "THEN INSERT (\n",
-    "      patient_dim_key,\n",
-    "      patient_id,\n",
-    "      first_name,\n",
-    "      last_name,\n",
-    "      age,\n",
-    "      address,\n",
-    "      phone_number,\n",
-    "      bill_amount,\n",
-    "      insurance_provider,\n",
+    "      insurance_dim_key,\n",
     "      policy_id,\n",
+    "      insurance_provider,\n",
+    "      amount_covered,\n",
+    "      claim_status,\n",
     "      checksum_txt,\n",
     "      load_ctl_key,\n",
     "      effective_start_dt,\n",
@@ -231,22 +273,40 @@
     "      is_current\n",
     ")\n",
     "VALUES (\n",
-    "      (SELECT COALESCE(MAX(patient_dim_key), 0) + 1 FROM patient_dim),\n",
-    "      src.patient_id,\n",
-    "      src.first_name,\n",
-    "      src.last_name,\n",
-    "      src.age,\n",
-    "      src.address,\n",
-    "      src.phone_number,\n",
-    "      src.bill_amount,\n",
-    "      src.insurance_provider,\n",
+    "      (SELECT COALESCE(MAX(insurance_dim_key), 0) + 1 FROM insurance_dim),\n",
     "      src.policy_id,\n",
+    "      src.insurance_provider,\n",
+    "      src.amount_covered,\n",
+    "      src.claim_status,\n",
     "      src.checksum_txt,\n",
-    "      src.load_ctl_key,\n",
+    "      date_format(current_timestamp(), \"yyyyMMddHHmmss\"),\n",
     "      current_timestamp(),\n",
     "      '9999-12-31',\n",
     "      'Y'\n",
     ");\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "bd596c59-2923-464d-ac4e-e01842865fc5",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "SELECT patient_id, is_current, effective_start_dt, effective_end_dt\n",
+    "FROM patient_dim\n",
+    "ORDER BY patient_id, effective_start_dt;\n"
    ]
   }
  ],
